# election-crawler

./: .gitignore  README.md  env.template  pyproject.toml  temporal.service  worker.service
deprecated/finetune/: .gitignore
deprecated/finetune/deprecated/: clean-data.ipynb
deprecated/finetune/json/: readme.txt
deprecated/finetune/models/subreddit/: .gitignore
election_crawler/: client.py  main.py  run_workflow.py  worker.py  workers.py
election_crawler/reddit/: Client.py  ParsedPost.py  Scraper.py  config.py.template
election_crawler/reddit/logs/class/: test_comments_parsed.yml  test_out_parsed(politics).yml  (+1 more)
election_crawler/reddit/utils/: api_calls.py
finetune/: .gitignore  clean.ipynb  config.py  dataset.ipynb  finetune.ipynb  mac-environment.yml  prepare-dev.ipynb  process-raw-data.ipynb  readme.md  readme.txt  subset.ipynb  toxicity.py  utils.py  wsl-environment.yml
finetune/colab/: finetune.ipynb  process-raw-data.ipynb
finetune/data/datasets/: readme.md
finetune/data/processed/: readme.md  readme.txt
finetune/data/raw/: readme.md
finetune/json/: example-cleaned-post.json  example-parsed-comment.json  example-parsed-post.json
finetune/json/output/: cleaned_data_DEVELOPMENT.json
finetune/lib/: analysis.py
finetune/models/subreddit/: .gitignore  finetune.ipynb  make-dataset.ipynb
parser/: .gitignore  clean-data.ipynb  go.mod  main.go  parse-data.ipynb  readme.txt
parser/dev/: example.go
parser/json/: example-cleaned-comment.json  example-cleaned-post.json  stream.go
parser/models/: models.go
tests/: test_election_crawler.py
(+16 files in other folders)
